--- a/package.json
+++ b/package.json
@@ -28,16 +28,16 @@
     "server.js"
   ],
   "dependencies": {
-    "http-proxy": "1.11.1",
+    "http-proxy": "^1.18.1",
     "proxy-from-env": "0.0.1"
   },
   "devDependencies": {
-    "coveralls": "^2.11.6",
-    "eslint": "^2.2.0",
-    "istanbul": "^0.4.2",
-    "lolex": "^1.5.0",
-    "mocha": "^3.4.2",
-    "nock": "^8.2.1",
+    "coveralls": "^2.13.3",
+    "eslint": "^2.13.1",
+    "istanbul": "^0.4.5",
+    "lolex": "^1.6.0",
+    "mocha": "^3.5.3",
+    "nock": "^8.2.2",
     "supertest": "^2.0.1"
   },
   "scripts": {
